--- a/src/main/resources/styles/main_page.css
+++ b/src/main/resources/styles/main_page.css
@@ -4,7 +4,7 @@
 
 .left-anchor-pane,
 .right-anchor-pane {
-  -fx-background-color: beige;
+  -fx-background-color: linear-gradient(to right, #ffefba, #ffffff);
 }
 
 .submit-app-btn,
