--- a/src/main/resources/views/notification/change_pwd_page.fxml
+++ b/src/main/resources/views/notification/change_pwd_page.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="changePwdAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="229.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.AccountController">
+<AnchorPane fx:id="changePwdAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="249.0" styleClass="change-pwd-page" stylesheets="@../../styles/changePwd.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.AccountController">
    <children>
-      <PasswordField fx:id="oldPassword" layoutX="112.0" layoutY="122.0" prefHeight="26.0" prefWidth="98.0" />
-      <PasswordField fx:id="newPassword" layoutX="112.0" layoutY="166.0" prefHeight="26.0" prefWidth="98.0" />
-      <PasswordField fx:id="confirmNewPassword" layoutX="112.0" layoutY="213.0" prefHeight="26.0" prefWidth="98.0" />
-      <Label layoutX="14.0" layoutY="75.0" prefHeight="18.0" prefWidth="109.0" text="Change Password" />
-      <Label layoutX="14.0" layoutY="126.0" prefHeight="18.0" prefWidth="98.0" text="Old password" />
-      <Label layoutX="14.0" layoutY="170.0" prefHeight="18.0" prefWidth="98.0" text="New password" />
-      <Label layoutX="14.0" layoutY="217.0" prefHeight="18.0" prefWidth="98.0" text="Confirm" />
-      <Button fx:id="changeBtn" layoutX="112.0" layoutY="277.0" mnemonicParsing="false" onAction="#handleChangeBtn" text="Change" />
-      <Label fx:id="errorLabel" layoutX="71.0" layoutY="250.0" prefHeight="18.0" prefWidth="138.0" text="Label" />
+      <PasswordField fx:id="oldPassword" layoutX="34.0" layoutY="107.0" prefHeight="34.0" prefWidth="176.0" styleClass="old-input" />
+      <PasswordField fx:id="newPassword" layoutX="35.0" layoutY="167.0" prefHeight="34.0" prefWidth="176.0" styleClass="new-input" />
+      <PasswordField fx:id="confirmNewPassword" layoutX="35.0" layoutY="227.0" prefHeight="34.0" prefWidth="176.0" styleClass="confirm-input" />
+      <Label layoutX="15.0" layoutY="25.0" prefHeight="42.0" prefWidth="215.0" styleClass="change-pwd-header" text="Change Password" />
+      <Label layoutX="36.0" layoutY="80.0" prefHeight="26.0" prefWidth="176.0" styleClass="old-pwd-label" text="Old password" />
+      <Label layoutX="36.0" layoutY="141.0" prefHeight="26.0" prefWidth="176.0" styleClass="new-pwd-label" text="New password" />
+      <Label layoutX="36.0" layoutY="201.0" prefHeight="26.0" prefWidth="176.0" styleClass="confirm-label" text="Confirm new password" />
+      <Button fx:id="changePwdBtn" layoutX="34.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleChangePwdBtn" styleClass="change-btn" text="Change" />
+      <Label fx:id="errorLabel" layoutX="34.0" layoutY="261.0" prefHeight="26.0" prefWidth="176.0" styleClass="error-label" />
    </children>
 </AnchorPane>
