--- a/src/main/resources/views/notification/notify_page.fxml
+++ b/src/main/resources/views/notification/notify_page.fxml
@@ -1,41 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="notifyAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="227.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.AccountController">
+<AnchorPane fx:id="notifyAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="289.0" styleClass="notify-page" stylesheets="@../../styles/notify.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.AccountController">
    <children>
-      <GridPane prefHeight="380.0" prefWidth="227.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <VBox fx:id="vbox" layoutY="42.0" prefHeight="302.0" prefWidth="290.0" styleClass="v-box">
          <children>
-            <TextField disable="true" editable="false" text="No new notification" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="1" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="2" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="3" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="4" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="5" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="6" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="7" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="8" />
-            <TextField disable="true" editable="false" GridPane.rowIndex="9" />
+            <ListView fx:id="listView" prefHeight="323.0" prefWidth="227.0" />
          </children>
-      </GridPane>
+      </VBox>
+      <Label layoutX="-1.0" prefHeight="42.0" prefWidth="290.0" styleClass="notification-header" text="Notifications" />
    </children>
 </AnchorPane>
