--- a/src/main/resources/views/otp/new_pwd_page.fxml
+++ b/src/main/resources/views/otp/new_pwd_page.fxml
@@ -5,11 +5,12 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="newPwdAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="405.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.LandingPageController">
+<AnchorPane fx:id="newPwdAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="284.0" prefWidth="405.0" styleClass="reset-pwd-page" stylesheets="@../../styles/forgotpwd.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.ResetPasswordController">
    <children>
-      <Label layoutX="69.0" layoutY="57.0" prefHeight="18.0" prefWidth="146.0" text="Enter new password" />
-      <PasswordField fx:id="newPwd" layoutX="67.0" layoutY="93.0" prefHeight="26.0" prefWidth="162.0" />
-      <Button fx:id="confirmNewPwdToNewPwdBtn" layoutX="252.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleConfirmNewPwdBtn" text="Confirm" />
-      <Button fx:id="cancelNewPwdBtn" layoutX="67.0" layoutY="133.0" mnemonicParsing="false" onAction="#backToHome" text="Cancel" />
+      <Label layoutX="67.0" layoutY="105.0" prefHeight="26.0" prefWidth="270.0" styleClass="new-pwd-label" text="Enter new password" />
+      <PasswordField fx:id="newPwd" layoutX="67.0" layoutY="142.0" prefHeight="29.0" prefWidth="185.0" styleClass="reset-pw-textfield" />
+      <Button fx:id="confirmNewPwdToNewPwdBtn" layoutX="274.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleConfirmNewPwdBtn" prefHeight="26.0" prefWidth="62.0" styleClass="confirm-reset-btn" text="Confirm" />
+      <Button fx:id="cancelNewPwdBtn" layoutX="67.0" layoutY="184.0" mnemonicParsing="false" onAction="#backToHome" prefHeight="26.0" prefWidth="58.0" styleClass="back-home-btn" text="Cancel" />
+      <Label layoutX="67.0" layoutY="34.0" prefHeight="42.0" prefWidth="292.0" styleClass="reset-pw-head" text="Reset Password" />
    </children>
 </AnchorPane>
