--- a/src/main/resources/styles/login.css
+++ b/src/main/resources/styles/login.css
@@ -32,8 +32,10 @@
   -fx-border-color: #7aa3e3;
   -fx-effect: dropshadow(three-pass-box, rgba(122, 163, 227, 0.5), 10, 0.0, 0, 0);
 }
+
 .create-acc-btn,
-.login-btn {
+.login-btn,
+.admin-btn {
   -fx-cursor: hand;
   -fx-border-radius: 7px;
   -fx-background-radius: 7;
@@ -49,6 +51,17 @@
 .create-acc-btn {
   -fx-background-color: #2a73c0;
   -fx-border-color: #37679a;
+}
+
+.admin-btn {
+  -fx-background-color: transparent;
+  -fx-border-color: dodgerblue;
+}
+
+.admin-btn:hover {
+  -fx-border-color: #ff9602;
+  -fx-scale-x: 1.01;
+  -fx-scale-y: 1.01;
 }
 
 .login-btn {
@@ -93,4 +106,25 @@
 .error-label {
   -fx-font-size: 12px;
   -fx-text-fill: #ff0000;
+}
+
+.back-home {
+  -fx-cursor: hand;
+  -fx-font-family: "Arial";
+  -fx-text-fill: #c6c6c6;
+  -fx-background-color: transparent;
+  -fx-font-weight: bold;
+  -fx-font-size: 11px;
+  -fx-border-color: transparent;
+  -fx-transition: background-color 0.3s, border-color 0.3s, -fx-scale-x 0.3s, -fx-scale-y 0.3s;
+}
+
+.back-home:hover {
+  -fx-scale-x: 1.05;
+  -fx-scale-y: 1.05;
+}
+
+.back-home:pressed {
+  -fx-scale-x: 0.98;
+  -fx-scale-y: 0.98;
 }
